Move checkers around

--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -11,17 +11,18 @@
     <!-- Navigation header hook -->
     <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
-        <div class="flex items-center h-20 p-6 pb-0">
+        <div class="flex items-center h-20 p-6">
+            <span class="text-lg">Lucas Sanders</span>
             <!-- Light version -->
-            <img
+            <!-- <img
                 class="dark:hidden w-30"
                 src="assets/images/logo/logo-text.svg"
-                alt="Logo image">
+                alt="Logo image"> -->
             <!-- Dark version -->
-            <img
+            <!-- <img
                 class="hidden dark:flex w-30"
                 src="assets/images/logo/logo-text-on-dark.svg"
-                alt="Logo image">
+                alt="Logo image"> -->
         </div>
     </ng-container>
 </fuse-vertical-navigation>
@@ -38,7 +39,7 @@
             <mat-icon [svgIcon]="'heroicons_outline:bars-3'"></mat-icon>
         </button>
         <!-- Components -->
-        <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
+        <!-- <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
             <languages></languages>
             <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
             <search [appearance]="'bar'"></search>
@@ -52,22 +53,23 @@
                 <mat-icon [svgIcon]="'heroicons_outline:chat-bubble-left-right'"></mat-icon>
             </button>
             <user></user>
-        </div>
+        </div> -->
     </div>
 
     <!-- Content -->
     <div class="flex flex-col flex-auto">
         <!-- *ngIf="true" hack is required here for router-outlet to work correctly.
              Otherwise, layout changes won't be registered and the view won't be updated! -->
-        <router-outlet *ngIf="true"></router-outlet>
+        <!-- <router-outlet *ngIf="true"></router-outlet> -->
+        <router-outlet></router-outlet>
     </div>
 
     <!-- Footer -->
     <div class="relative flex flex-0 items-center justify-start w-full h-14 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden">
-        <span class="font-medium text-secondary">Fuse &copy; {{currentYear}}</span>
+        <span class="font-medium text-secondary">Lucas Sanders portfolio</span>
     </div>
 
 </div>
 
 <!-- Quick chat -->
-<quick-chat #quickChat="quickChat"></quick-chat>
+<!-- <quick-chat #quickChat="quickChat"></quick-chat> -->
