--- a/src/app/layout/layouts/vertical/dense/dense.component.html
+++ b/src/app/layout/layouts/vertical/dense/dense.component.html
@@ -13,10 +13,11 @@
     <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
         <div class="flex items-center justify-center h-20">
-            <img
+            <!-- <img
                 class="w-8"
                 src="assets/images/logo/logo.svg"
-                alt="Logo image">
+                alt="Logo image"> -->
+                LS
         </div>
     </ng-container>
 </fuse-vertical-navigation>
@@ -34,16 +35,17 @@
                 <mat-icon [svgIcon]="'heroicons_outline:bars-3'"></mat-icon>
             </button>
             <!-- Navigation appearance toggle button -->
-            <button
+            <!-- <button
                 class="hidden md:inline-flex"
                 mat-icon-button
                 (click)="toggleNavigationAppearance()">
                 <mat-icon [svgIcon]="'heroicons_outline:arrows-right-left'"></mat-icon>
-            </button>
+            </button> -->
         </div>
         <!-- Components -->
         <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
-            <languages></languages>
+            <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
+            <!-- <languages></languages>
             <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
             <search [appearance]="'bar'"></search>
             <shortcuts></shortcuts>
@@ -55,7 +57,7 @@
                 (click)="quickChat.toggle()">
                 <mat-icon [svgIcon]="'heroicons_outline:chat-bubble-left-right'"></mat-icon>
             </button>
-            <user></user>
+            <user></user> -->
         </div>
     </div>
 
@@ -63,15 +65,16 @@
     <div class="flex flex-col flex-auto">
         <!-- *ngIf="true" hack is required here for router-outlet to work correctly.
              Otherwise, layout changes won't be registered and the view won't be updated! -->
-        <router-outlet *ngIf="true"></router-outlet>
+        <!-- <router-outlet *ngIf="true"></router-outlet> -->
+        <router-outlet></router-outlet>
     </div>
 
     <!-- Footer -->
     <div class="relative flex flex-0 items-center justify-start w-full h-14 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden">
-        <span class="font-medium text-secondary">Fuse &copy; {{currentYear}}</span>
+        <span class="font-medium text-secondary">Lucas Sanders portfolio</span>
     </div>
 
 </div>
 
 <!-- Quick chat -->
-<quick-chat #quickChat="quickChat"></quick-chat>
+<!-- <quick-chat #quickChat="quickChat"></quick-chat> -->
