Updates to checkers game

--- a/src/@fuse/components/navigation/horizontal/components/basic/basic.component.html
+++ b/src/@fuse/components/navigation/horizontal/components/basic/basic.component.html
@@ -111,8 +111,9 @@
                 {{item.title}}
             </span>
         </div>
+
         <ng-container *ngIf="item.subtitle">
-            <div class="fuse-horizontal-navigation-item-subtitle text-hint">
+            <div class="fuse-horizontal-navigation-item-subtitle text-secondary">
                 <span [ngClass]="item.classes?.subtitle">
                     {{item.subtitle}}
                 </span>
