--- a/src/app/layout/layouts/horizontal/centered/centered.component.html
+++ b/src/app/layout/layouts/horizontal/centered/centered.component.html
@@ -15,9 +15,7 @@
             <ng-container fuseVerticalNavigationContentHeader>
                 <!-- Logo -->
                 <div class="flex items-center h-20 pt-6 px-8">
-                    <img
-                        class="w-30"
-                        src="assets/images/logo/logo-text-on-dark.svg">
+                    Projects
                 </div>
             </ng-container>
         </fuse-vertical-navigation>
@@ -30,25 +28,9 @@
         <div class="relative flex flex-0 items-center w-full h-16 sm:h-20 px-4 md:px-6 z-49 bg-card border-b dark:bg-default print:hidden">
             <ng-container *ngIf="!isScreenSmall">
                 <!-- Logo -->
-                <div class="flex items-center mx-2 lg:mr-8">
-                    <div class="hidden lg:flex">
-                        <!-- Light version -->
-                        <img
-                            class="dark:hidden w-24"
-                            src="assets/images/logo/logo-text.svg"
-                            alt="Logo image">
-                        <!-- Dark version -->
-                        <img
-                            class="hidden dark:flex w-24"
-                            src="assets/images/logo/logo-text-on-dark.svg"
-                            alt="Logo image">
-                    </div>
-                    <!-- Small version -->
-                    <img
-                        class="flex lg:hidden w-8"
-                        src="assets/images/logo/logo.svg"
-                        alt="Logo image">
-                </div>
+                <!-- <div class="flex items-center mx-2 lg:mr-8">
+
+                </div> -->
                 <!-- Horizontal navigation -->
                 <fuse-horizontal-navigation
                     class="mr-2"
@@ -66,13 +48,9 @@
             </ng-container>
             <!-- Components -->
             <div class="flex items-center pl-2 ml-auto space-x-1 sm:space-x-2">
-                <languages></languages>
                 <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
                 <search [appearance]="'bar'"></search>
-                <shortcuts></shortcuts>
-                <messages></messages>
-                <notifications></notifications>
-                <user></user>
+                <!-- <notifications></notifications> -->
             </div>
         </div>
 
@@ -84,9 +62,9 @@
         </div>
 
         <!-- Footer -->
-        <div class="relative flex flex-0 items-center justify-start w-full h-16 sm:h-20 px-6 sm:px-8 z-49 bg-card border-t dark:bg-default print:hidden">
-            <span class="font-medium text-secondary">Fuse &copy; {{currentYear}}</span>
-        </div>
+        <!-- <div class="relative flex flex-0 items-center justify-start w-full h-16 sm:h-20 px-6 sm:px-8 z-49 bg-card border-t dark:bg-default print:hidden">
+
+        </div> -->
 
     </div>
 
