--- a/src/app/modules/portfolio/home/home.component.html
+++ b/src/app/modules/portfolio/home/home.component.html
@@ -1,10 +1,6 @@
 <div class="flex flex-col items-center justify-center w-full h-full">
     <div class="w-full max-w-3xl">
         <div class="max-w-none mx-auto prose prose-sm">
-            <img
-                class="w-20"
-                src="assets/images/logo/logo.svg"
-                alt="Logo image">
             <h1>Landing Module</h1>
             <p>
                 This can be the landing or the welcome page of your application. If you have an SSR (Server Side Rendering) setup, or if you don't need to have Search engine
@@ -20,7 +16,7 @@
                 class="mt-8"
                 mat-flat-button
                 [color]="'primary'"
-                [routerLink]="'/dashboards/project'">
+                [routerLink]="'/checkers'">
                 <span>Launch the App</span>
                 <mat-icon
                     class="ml-2 icon-size-5"
