--- a/src/app/layout/layouts/vertical/thin/thin.component.html
+++ b/src/app/layout/layouts/vertical/thin/thin.component.html
@@ -13,10 +13,7 @@
     <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
         <div class="flex items-center justify-center h-20">
-            <img
-                class="w-8"
-                src="assets/images/logo/logo.svg"
-                alt="Logo image">
+
         </div>
     </ng-container>
 </fuse-vertical-navigation>
@@ -59,9 +56,9 @@
     </div>
 
     <!-- Footer -->
-    <div class="relative flex flex-0 items-center justify-start w-full h-14 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden">
-        <span class="font-medium text-secondary">Fuse &copy; {{currentYear}}</span>
-    </div>
+    <!-- <div class="relative flex flex-0 items-center justify-start w-full h-14 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden">
+
+    </div> -->
 
 </div>
 
