Small fixes on checkers view on mobile

--- a/src/app/layout/common/search/search.component.html
+++ b/src/app/layout/common/search/search.component.html
@@ -7,7 +7,7 @@
         <mat-icon class="absolute ml-6 sm:ml-8" [svgIcon]="'heroicons_outline:magnifying-glass'"></mat-icon>
         <input class="w-full h-full px-16 sm:px-18" [formControl]="searchControl" [matAutocomplete]="matAutocomplete" [placeholder]="'Search...'"
             (keydown)="onKeydown($event)" (blur)="blurInputBar()" #barSearchInput>
-        <mat-autocomplete class="max-h-128 sm:px-2 border-t rounded-b shadow-md" [autoSelectActiveOption]="true" [disableRipple]="true"
+        <mat-autocomplete class="max-h-128 sm:px-2 border-t rounded-b shadow-md dark:bg-[#333333]" [autoSelectActiveOption]="true" [disableRipple]="true"
             #matAutocomplete="matAutocomplete">
             @if (resultSet) {
             <mat-option class="py-0 px-6 text-md pointer-events-none text-secondary bg-transparent" *ngIf="!resultSet.length">
@@ -16,7 +16,7 @@
 
             <ng-container *ngFor="let result of resultSet; trackBy: trackByFn">
                 <mat-option class="group relative mb-1 py-0 px-6 text-md rounded-md hover:bg-gray-100 dark:hover:bg-hover" [routerLink]="result.link"
-                    [value]="result.value">
+                    [value]="result.value" (click)="close()">
                     <ng-container *ngTemplateOutlet="pageResult; context: {$implicit: result}"></ng-container>
                 </mat-option>
             </ng-container>
