--- a/src/app/layout/layouts/horizontal/centered/centered.component.html
+++ b/src/app/layout/layouts/horizontal/centered/centered.component.html
@@ -6,7 +6,7 @@
     <!-- Navigation -->
     <ng-container *ngIf="isScreenSmall">
         <fuse-vertical-navigation
-            class="dark bg-gray-900 print:hidden"
+            class=" bg-[#F5F5F5] dark:dark dark:bg-[#333333] print:hidden"
             [mode]="'over'"
             [name]="'mainNavigation'"
             [navigation]="navigation.default"
@@ -14,7 +14,7 @@
             <!-- Navigation header hook -->
             <ng-container fuseVerticalNavigationContentHeader>
                 <!-- Logo -->
-                <div class="flex items-center h-20 pt-6 px-8">
+                <div class="flex items-center h-20 pt-6 px-8 text-lg font-semibold">
                     Projects
                 </div>
             </ng-container>
