--- a/src/app/modules/checkers/checkers.component.html
+++ b/src/app/modules/checkers/checkers.component.html
@@ -1,5 +1,5 @@
-<div class="w-full max-w-full m-6 flex flex-col">
-  <div class="w-full flex flex-col md:flex-row gap-4" #contentContainer>
+<div class="max-w-screen p-4 lg:p-6">
+  <div class="flex flex-col md:flex-row gap-4" #contentContainer>
     
     <!-- Checkers board -->
     <div class="mt-0.5 lg:mt-1 outline outline-2 lg:outline-4 outline-gray-700 dark:outline-gray-100 flex flex-col relative" #checkersBoard
