--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -2,7 +2,10 @@
     <div class="w-full max-w-3xl">
         <div class="max-w-none mx-auto prose prose-sm">
             <h1>Lucas Sanders</h1>
-            <h2 class="mb-4">Software Portfolio</h2>
+
+            <mat-divider class="my-12"></mat-divider>
+
+            <h2 class="mb-4">About Me</h2>
             <p>
                 I'm a versatile software engineer with a track record of excellent full-stack development, and a specialty in user interface design and execution.
                 I have a proven track record building applications across many industries, from media and HR tech to finance and telecommunications.
